Cập nhật nhặt đồ

--- a/Tìm, nhặt đồ/nhatdo.html
+++ b/Tìm, nhặt đồ/nhatdo.html
@@ -140,49 +140,32 @@
             <div class="techno-body">
                 <div class="techno-item">
                     <div class="techno-item-img">
-                        <img src="file:///C:/Users/Administrator/Pictures/v1a1qejt5onmk.png" alt="" width="600px" height="400px">
+                        <img src="image/tui.png" alt=""> 
                     </div>
                         <div class="techno-item-content">
-                            <span>02 April 2021</span>
-                            <h3><strong>Phát hiện thú cưng bị lạc tại quận Ngũ Hành Sơn </strong></h3>
-                            <p>Vào lúc 13h30 ngày 2/4 tôi phát hiện 1 chú chó như hình đang bị lạc tại k420 Lê Văn Hiến,
-                            phường Khuê Mỹ, quận Ngũ Hành Sơn, tp Đà Nẵng.
-                            Ai là chủ nhân của chú chó thì liên hệ với tôi qua sđt: 0325267815</p> 
+                            <span>08 March 2020</span>
+                            <h3><strong>Nhặt Túi xách tại quận Thanh Khê</strong></h3>
+                            <p>Vào lúc 16h30 sáng ngày 8/3 mình nhặt được 1 túi xách như hình tại đường Nguyễn Trãi. Ai là chủ nhân của túi xách trên thì liên hệ mình qua sđt: 0375731267 để nhận lại ạ</p>
                         </div>
                 </div>
                 <div class="techno-item">
                     <div class="techno-item-img">
-                        <img src="file:///C:/Users/Administrator/Downloads/174240672_3183855235183677_5824905825522985510_n.jpg" alt=""
-                        width="600px" height="400px">                 
+                        <img src="image/dienthoai.png" alt="">
+                    </div>
+                        <div class="techno-item-content">
+                            <span>10 March 2020</span>
+                            <h3><strong>Nhặt Điện thoại tại quận Ngũ Hành Sơn</strong></h3>
+                            <p>Vào lúc 6h ngày 10/3 mình nhặt được 1 chiếc điện như hình tại đường Mỹ An 7, quận Ngũ Hành Sơn. Ai là chủ nhân của chiếc điện thoại trên thì liên hệ tôi qua sđt: 0382567267 để nhận lại ạ</p>
+                        </div>
+                </div>
+                <div class="techno-item">
+                    <div class="techno-item-img">
+                        <img src="file:///C:/Users/Administrator/Pictures/t%E1%BA%A3i%20xu%E1%BB%91ng.png" alt=""
+                        width="400px" height="250px">                 
                         <div class="techno-item-content">
                             <span>08 March 2021</span>
                             <h3><strong>Nhặt CMND tại quận Hải Châu</strong></h3>
-                            <p>Vào lúc 11h15 ngày 8/3 tôi nhặt được 1 CMND của bạn Hoàng Thị Thu Hoài
-                            tại tầng 3 của siêu thị BigC
-                            Bạn liên hệ sđt: 0357281990 để nhận lại!</p>
-                        </div>
-                </div>
-                <div class="techno-item">
-                    <div class="techno-item-img">
-                        <img src="file:///C:/Users/Administrator/Downloads/172204949_160571289281095_2049037309237716145_n.jpg" alt="" width="600px" height="400px">
-                    </div>
-                        <div class="techno-item-content">
-                            <span>22 February 2021</span>
-                            <h3><strong>Nhặt Vé giữ xe tại Trường Đại học Kinh tế quận Ngũ Hành Sơn</strong></h3>
-                            <p>Vào lúc 8h sáng ngày 22/2 mình nhặt được 1 vé giữ xe tại Phòng A211 
-                            trường Đại học Kinh tế. Ai là chủ nhân của vé giữ xe với biển số xe trên
-                            thì liên hệ tôi qua sđt: 0375731267 để nhận lại ạ</p>
-                        </div>
-                </div>
-                <div class="techno-item">
-                    <div class="techno-item-img">
-                        <img src="file:///C:/Users/Administrator/Downloads/171729135_160295382637822_7581583660211322421_n.jpg" alt="" width="600px" height="400px">
-                    </div>
-                        <div class="techno-item-content">
-                            <span>12 February 2021</span>
-                            <h3><strong>Nhặt Điện thoại tại quận Ngũ Hành Sơn</strong></h3>
-                            <p>Vào lúc 17h ngày 12/2 mình nhặt được 1 chiếc điện như hình tại đường Ngũ Hành Sơn
-                            Ai là chủ nhân của chiếc điện thoại trên thì liên hệ tôi qua sđt: 0382567267 để nhận lại ạ</p>
+                            <p>Vào lúc 11h15 ngày 8/3 tôi nhặt được 1 CMND của cô Trần Thị Diễm tại siêu thị Big C quận hải Châu. Cô liên hệ sđt: 0357281990 để nhận lại ạ!</p>
                         </div>
                 </div>
             </div>
